[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/main_menu.gd" type="Script" id=1]
[ext_resource path="res://UI/main_menu.png" type="Texture" id=2]

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayButton" type="Button" parent="."]
margin_left = -257.0
margin_top = -150.0
margin_right = 228.0
margin_bottom = -1.0
flat = true

[node name="OptionButton" type="Button" parent="."]
margin_left = -257.0
margin_top = 37.0098
margin_right = 228.0
margin_bottom = 186.01
flat = true

[node name="QuitButton" type="Button" parent="."]
margin_left = -260.896
margin_top = 220.124
margin_right = 224.104
margin_bottom = 369.124
flat = true

